--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body {
     background: linear-gradient(45deg, #00ff99 0%, #0066cc 33%, #00ff99 66%, #0066cc 100%);
     background-size: 400% 400%;
     background-clip: text;
-    color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     animation: h1-anim 4s linear infinite;
 }
 .header h3 {
@@ -29,6 +30,14 @@ body {
     text-align: center;
     text-transform: uppercase;
     font-size: 50px;
+}
+@media screen and (max-width: 650px) {
+    .header h1 {
+        font-size: 100px;
+    }
+    .header h3 {
+        font-size: 40px;
+    }
 }
 @keyframes h1-anim {
     0% {
