--- a/style.css
+++ b/style.css
@@ -1,92 +1,7 @@
 body {
-    font-family: sans-serif;
-    background-color: #888888;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden;
 }
-.start {
-    display: block;
-    position: relative;
-    width: 100%;
-    height: 100vh;
-}
-.start #catsense {
-    display: inline-block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.start .header {
-    display: inline-block;
-    text-align: center;
-    background-color: rgba(0, 0, 0, 90%);
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-.start .header h1 {
-    margin-top: 0px;
-    text-rendering: optimizeLegibility;
-    font-size: 150px;
-    background: linear-gradient(45deg, #00ff99 0%, #0066cc 33%, #00ff99 66%, #0066cc 100%);
-    background-size: 400% 400%;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: h1-anim 4s linear infinite;
-}
-.start .box {
-    margin-top: 50px;
-    display: inline-block;
-    background-color: #111111;
-    padding: 25px 25px 50px 25px;
-    border: 1px solid black;
-    border-radius: 15px;
-}
-.start .box button {
-    display: inline-block;
-    background: #0099dd;
-    color: rgb(15, 15, 15);
-    font-size: 15px;
-    border: 2px outset #0077dd;
-    border-radius: 15px;
-    vertical-align: middle;
-    margin: 10px;
-}
-.start .box button:not(:hover) {
-    transform: scale(1.0);
-    transition: transform 0.8s ease-in-out 0s;
-}
-.start .box button:hover {
-    transform: scale(1.1);
-    transition: transform 0.8s ease-in-out 0s;
-}
-.start .box span {
-    font-size: 25px;
-    text-transform: uppercase;
-}
-.start #discord {
-    padding: 13px 48px 13px 48px;
-}
-.start #discord a {
-    text-decoration: none;
-    color: rgb(15, 15, 15);
-}
-.start #client {
-    padding: 5px 45px 5px 45px;
-}
-@media screen and (max-width: 650px) {
-    .start .header h1 {
-        font-size: 100px;
-    }
-}
-@keyframes h1-anim {
-    0% {
-        background-position: 100% 0%;
-    }
-    100% {
-        background-position: 15% 100%;
-    }
+img {
+    width: 100%;   
 }
