--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
     margin: 0px;
     padding: 0px;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 img {
-    width: 100%;   
+    width: 100%;
 }
